--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -63,7 +63,7 @@ content %}
       </tr>
       <tr>
         <td><label>Role</label></td>
-        <td>{{ user.Role }}</td>
+        <td>{{ user.primary_role_name }}</td>
       </tr>
       {% if user.contact %}
       <tr>
