--- a/app/static/css/core/base.css
+++ b/app/static/css/core/base.css
@@ -261,6 +261,11 @@ h1 {
     text-align: center;
 }
 
+.flash-container-inline {
+    width: 100%;
+    margin-bottom: 20px;
+}
+
 .flash {
     margin-bottom: 10px;
     padding: 15px;
@@ -323,6 +328,7 @@ h1 {
     font-size: 16px;
     color: #333;
 }
+
 /* Login Page Links */
 .login-link {
     text-decoration: none;
@@ -332,5 +338,6 @@ h1 {
 }
 
 .login-link:hover {
-    color: #772432; /* Toastmasters core color */
+    color: #772432;
+    /* Toastmasters core color */
 }
