--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -136,6 +136,7 @@
       </div>
       {% endif %}
 
+      {% block flash_messages %}
       {% with messages = get_flashed_messages(with_categories=true) %}
       {% if messages %}
       <div class="flash-messages">
@@ -150,6 +151,7 @@
       </div>
       {% endif %}
       {% endwith %}
+      {% endblock %}
 
       {% block
       content %}{% endblock %}
